--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,19 @@
 			name="description"
 			content="Web site created using create-react-app" />
 		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+		<!-- Poppins Font -->
 		<link
-			href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
 			rel="stylesheet" />
+		<!-- Cairo Font (for Arabic) -->
+		<link
+			href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600&display=swap"
+			rel="stylesheet" />
+		<!-- index.html -->
+		<link
+			href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap"
+			rel="stylesheet" />
+
 		<!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
