--- a/public/index.html
+++ b/public/index.html
@@ -1,23 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta name="theme-color" content="#000000" />
+
+		<!-- Basic SEO -->
+		<title>My To-Do App</title>
 		<meta
 			name="description"
-			content="Web site created using create-react-app" />
-		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-		<!-- Poppins Font -->
-		<link
-			href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
-			rel="stylesheet" />
-		<!-- Cairo Font (for Arabic) -->
-		<link
-			href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600&display=swap"
-			rel="stylesheet" />
-		<!-- index.html -->
+			content="Organize your tasks easily with My To-Do App — fast, simple, and beautiful." />
+		<meta
+			name="keywords"
+			content="to-do app, task manager, productivity, checklist" />
+		<meta name="author" content="Hazem Abdullah" />
+
+		<!-- Open Graph / Facebook / WhatsApp / LinkedIn -->
+		<meta property="og:type" content="website" />
+		<meta
+			property="og:url"
+			content="https://to-do-react-theta-sand.vercel.app/" />
+		<meta property="og:title" content="My To-Do App" />
+		<meta
+			property="og:description"
+			content="Organize your tasks easily with My To-Do App — fast, simple, and beautiful." />
+		<meta
+			property="og:image"
+			content="https://plus.unsplash.com/premium_vector-1723275529705-0ee35785fddb?q=80&w=2360&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" />
+
+		<!-- Twitter -->
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta
+			name="twitter:url"
+			content="https://to-do-react-theta-sand.vercel.app/" />
+		<meta name="twitter:title" content="My To-Do App" />
+		<meta
+			name="twitter:description"
+			content="Organize your tasks easily with My To-Do App — fast, simple, and beautiful." />
+		<meta
+			name="twitter:image"
+			content="https://plus.unsplash.com/premium_vector-1723275529705-0ee35785fddb?q=80&w=2360&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" />
+
+		<!-- Favicons -->
+		<link rel="icon" href="checklist.png" />
+		<link rel="apple-touch-icon" sizes="180x180" href="checklist.png" />
+		<!-- Tajwal font -->
 		<link
 			href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap"
 			rel="stylesheet" />
@@ -35,7 +60,6 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-		<title>To-Do App</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
